--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "conflictura",
-    "preductname": "Conflictura Launcher",
-    "version": "3.3.3",
-    "description": "Conflictura modded server launcher",
+    "name": "Oranium",
+    "preductname": "Oranium Launcher",
+    "version": "1.0.0",
+    "description": "Oranium modded server launcher",
     "main": "src/app.js",
-    "author": "Riptiaz/Boulldogo/Vexato/Luuxis",
-    "env": "azuriom",
-    "settings": "https://conflictura.eu",
+    "author": "Antivirus_5846, Riptiaz/Boulldogo/Vexato/Luuxis",
+    "env": "panel",
+    "settings": "http://launcher.oraheberg.ovh/",
     "scripts": {
         "start": "cross-env-shell NODE_ENV=dev electron .",
         "build": "node build.js --obf=true --build=platform",
@@ -37,6 +37,6 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/Riptiaz/CentralCorp-Launcher.git"
+        "url": "git+https://github.com/antivirus5846/oranium-Launcher.git"
     }
 }
